# Speckit-Hackthon-1

./: .gitignore  README.md
.claude/: settings.local.json
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
backend/: agent.py  agentconfig.py  config.py  database.py  index_book.py  main.py  pyproject.toml  qdrant_search_tool.py  security.py  test.db  test_agent.py
backend/services/: document_processor.py  rag_pipeline.py
constitution/: constitution.md
frontend/: .npmignore  docusaurus.config.ts  package.json  sidebars.ts
frontend/docs/: index.mdx
frontend/docs/chapters/: chapter-1.mdx  chapter-10.mdx  chapter-2.mdx  chapter-3.mdx  chapter-4.mdx  chapter-5.mdx  chapter-6.mdx  chapter-7.mdx  chapter-8.mdx  chapter-9.mdx
frontend/i18n/en/: code.json
frontend/i18n/ur/: code.json
frontend/src/components/: AuthForms.module.css  Chatbot.module.css  SignInForm.tsx  SignUpForm.tsx
frontend/src/css/: custom.css
frontend/src/pages/: index.mdx
history/prompts/constitution/: 0001-establish-panaversity-physical-ai-humanoid-robotics-hackathon-constitution.constitution.prompt.md
history/prompts/final-floating-chatbot/: 001-generate-tasks-for-floating-chatbot-feature.tasks.prompt.md
history/prompts/general/: 0002-clarify-command-missing-spec-file.general.prompt.md  001-clarify-github-pages-deployment-request.general.prompt.md  001-complete-rag-chatbot-implementation.general.prompt.md  002-github-pages-deployment-guidance.general.prompt.md  (+20 more)
specs/main/: analysis_report_2025-12-03.md  plan.md  spec.md  tasks.md
(+30 files in other folders)
