[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tensorflow>=2.15",
    "fastapi>=0.122.0",
    "httpx",
    "litellm",
    "openai-agents",
    "passlib[bcrypt]==1.7.4",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]==3.3.0",
    "qdrant-client",
    "sqlalchemy==1.4.47",
    "uvicorn==0.23.2",
    "google-generativeai",
]
